# rust_proj

./: .gitattributes  .gitignore  Cargo.toml
src/: NN_rust.rs  chess.rs  dict_test.py  file_renamer.rs  learning_rust.rs  main.rs  neural_network.rs  random_utils.rs  stuff_todo.txt  thread_pool.rs  time_utils.rs
src/NN_rust/: NN.rs  addition.csv  addition.flow  make_csv.rs
src/chess/: chess_main.rs  chess_pvai.rs  chess_pvp.rs  chess_utils.rs
src/chess/chess_main/: chess_utils.rs
src/chess/chess_pvp/: chess_utils_broken.rs
src/etai/: ast.rs  lexer.rs  parser.rs  test.et
src/export_test/: test.rs
src/game_of_life/: game.rs
src/learning_rust/: concurrency.rs  file_renamer.rs  iterators.rs  macros.rs  mod.rs  patterns.rs  state_design.rs  test1.rs  unsafe_rust.rs
src/neural_network/: addition.et  mnist_net.et  mnist_sample.csv  neurons.rs  sine.et
src/physics_engine/: graphics.rs  graphics1.rs  graphics2.rs  mod.rs  physics.rs
src/ray_tracer/: screen.rs  shapes.rs
