[package]
name = "rust_proj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"
rand = "0.8.5"
image = "0.24.5"
csv = "1.2"
paste = "1.0"
chrono = "0.4.23"
serde_json = "1.0.93"
eframe = "0.21.3"
egui = "0.21.0"
egui-macroquad = "0.15.0"
winit = "0.28.3"
winapi = "0.3.9"
